# learnOpenGL

./: .gitignore  CMakeLists.txt  learnOpenGl.sln  readme.md
learnOpenGl/: CMakeLists.txt  glad.c  learnOpenGl.vcxproj  learnOpenGl.vcxproj.filters  main.cpp
learnOpenGl/externalLibs/: readme.txt
learnOpenGl/include/glad/: glad.h
learnOpenGl/learningPhases/: learning-phases.h  lp-common.cpp  lp-common.h  main-create-widndow.cpp  main-create-window.cpp  main-hello-triangle-line.cpp
sublime/: learnOpenGl.sublime-project  learnOpenGl.sublime-workspace
